@@ -23,6 +23,8 @@ import net.minecraft.world.level.levelgen.feature.configurations.OreConfiguratio
 import com.mojang.datafixers.util.Either;
 import com.mojang.serialization.MapCodec;
 import com.tterrag.registrate.util.nullness.NonNullSupplier;
+import it.unimi.dsi.fastutil.floats.FloatArrayList;
+import it.unimi.dsi.fastutil.floats.FloatList;
 import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 import lombok.NoArgsConstructor;
 
@@ -31,7 +33,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @SuppressWarnings("UnusedReturnValue")
 @NoArgsConstructor
@@ -53,24 +54,12 @@ public class LayeredVeinGenerator extends VeinGenerator {
     }
 
     @Override
-    public List<Map.Entry<Either<BlockState, Material>, Integer>> getAllEntries() {
+    public List<VeinEntry> getAllEntries() {
         return getLayerPatterns().stream()
                 .flatMap(pattern -> pattern.layers.stream())
-                .map(layer -> Map.entry(
-                        layer.targets.stream()
-                                .flatMap(entry -> entry.map(
-                                        blockStates -> blockStates.stream()
-                                                .map(state -> Either.<BlockState, Material>left(state.state)),
-                                        material -> Stream.of(Either.<BlockState, Material>right(material))))
-                                .toList(),
-                        layer.weight))
-                .flatMap(entry -> {
-                    var iterator = entry.getKey().iterator();
-                    return Stream.generate(() -> Map.entry(iterator.next(), entry.getValue()))
-                            .limit(entry.getKey().size());
-                })
+                .flatMap(GTLayerPattern.Layer::asVeinEntries)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -100,7 +89,7 @@ public class LayeredVeinGenerator extends VeinGenerator {
             return Map.of();
 
         List<GTLayerPattern.Layer> resolvedLayers = new ArrayList<>();
-        List<Float> layerDiameterOffsets = new ArrayList<>();
+        FloatList layerDiameterOffsets = new FloatArrayList();
 
         int layerCoordinate = random.nextInt(4);
         int slantyCoordinate = random.nextInt(3);
@@ -138,7 +127,7 @@ public class LayeredVeinGenerator extends VeinGenerator {
                     }
 
                     if ((sizeFractionX * sizeFractionX) + (sizeFractionY * sizeFractionY) +
-                            (sizeFractionZ * sizeFractionZ) > 1 * layerDiameterOffsets.get(layerIndex))
+                            (sizeFractionZ * sizeFractionZ) > 1 * layerDiameterOffsets.getFloat(layerIndex))
                         continue;
 
                     GTLayerPattern.Layer layer = resolvedLayers.get(layerIndex);
